--- a/time complexity.ipynb
+++ b/time complexity.ipynb
@@ -16,9 +16,40 @@
    },
    "source": [
     "\\begin{align}\n",
+    "O(1)\n",
+    "\\end{align}에 관련된 소스 코드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# index를 통해 리스트의 원소에 접근할 때\n",
+    "list = [1, 4, 6, 7, 9, 10, 14]\n",
+    "print(list[0])\n",
+    "print(list[4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "\\begin{align}\n",
     "O(n)\n",
-    "\\end{align}\n",
-    "에 관련된 소스 코드"
+    "\\end{align}에 관련된 소스 코드"
    ]
   },
   {
@@ -46,15 +77,6 @@
     "for i in range(1, 10):\n",
     "    print i"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
