--- a/time complexity.ipynb
+++ b/time complexity.ipynb
@@ -15,9 +15,10 @@
     "collapsed": true
    },
    "source": [
-    "\\begin{align}\n",
+    "\\begin{equation*}\n",
     "O(1)\n",
-    "\\end{align}에 관련된 소스 코드"
+    "\\end{equation*}\n",
+    "\"awesome!\""
    ]
   },
   {
@@ -35,7 +36,7 @@
     }
    ],
    "source": [
-    "# index를 통해 리스트의 원소에 접근할 때\n",
+    "# index를 통해 배열의 원소에 접근할 때\n",
     "list = [1, 4, 6, 7, 9, 10, 14]\n",
     "print(list[0])\n",
     "print(list[4])"
@@ -47,9 +48,10 @@
     "collapsed": true
    },
    "source": [
-    "\\begin{align}\n",
+    "\\begin{equation*}\n",
     "O(n)\n",
-    "\\end{align}에 관련된 소스 코드"
+    "\\end{equation*}\n",
+    "\"pretty good!\""
    ]
   },
   {
@@ -74,8 +76,52 @@
     }
    ],
    "source": [
+    "# 1부터 n까지의 for문\n",
     "for i in range(1, 10):\n",
-    "    print i"
+    "    print i\n",
+    "    \n",
+    "# list의 경우 i번째 index에 접근하는 경우 해당 index까지 찾아가야 하기 때문에 시간복잡도 O(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "\\begin{equation*}\n",
+    "O(n^2)\n",
+    "\\end{equation*}\n",
+    "\"oops..\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 2* 1=2  3* 1=3  4* 1=4  5* 1=5  6* 1=6  7* 1=7  8* 1=8  9* 1=9 \n",
+      " 2* 2=4  3* 2=6  4* 2=8  5* 2=10  6* 2=12  7* 2=14  8* 2=16  9* 2=18 \n",
+      " 2* 3=6  3* 3=9  4* 3=12  5* 3=15  6* 3=18  7* 3=21  8* 3=24  9* 3=27 \n",
+      " 2* 4=8  3* 4=12  4* 4=16  5* 4=20  6* 4=24  7* 4=28  8* 4=32  9* 4=36 \n",
+      " 2* 5=10  3* 5=15  4* 5=20  5* 5=25  6* 5=30  7* 5=35  8* 5=40  9* 5=45 \n",
+      " 2* 6=12  3* 6=18  4* 6=24  5* 6=30  6* 6=36  7* 6=42  8* 6=48  9* 6=54 \n",
+      " 2* 7=14  3* 7=21  4* 7=28  5* 7=35  6* 7=42  7* 7=49  8* 7=56  9* 7=63 \n",
+      " 2* 8=16  3* 8=24  4* 8=32  5* 8=40  6* 8=48  7* 8=56  8* 8=64  9* 8=72 \n",
+      " 2* 9=18  3* 9=27  4* 9=36  5* 9=45  6* 9=54  7* 9=63  8* 9=72  9* 9=81 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# 구구단의 경우도 하나의 예제가 될 수 있을듯\n",
+    "for i in range(1, 10):\n",
+    "    for j in range(2, 10):\n",
+    "        print \"{:= 2}*{:= 2}={}\".format(j, i, j * i),\n",
+    "    print \"\""
    ]
   }
  ],
