--- a/time complexity.ipynb
+++ b/time complexity.ipynb
@@ -44,6 +44,16 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation*}\n",
+    "O(logn)\n",
+    "\\end{equation*}\n",
+    "\"awesome!\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
