--- a/time complexity.ipynb
+++ b/time complexity.ipynb
@@ -95,6 +95,16 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation*}\n",
+    "O(nlogn)\n",
+    "\\end{equation*}\n",
+    "\"uhm.. not bad\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
