--- a/basic.ipynb
+++ b/basic.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 기본 문법"
+    "# Object Oriented Programming 기본 문법"
    ]
   },
   {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -79,9 +79,50 @@
     "        \n",
     "    def printSpeed(self):\n",
     "        print \"속도는 {}km/h 입니다.\".format(self.speed)\n",
-    "        \n",
+    "\n",
+    "# Object : An Instance of a class\n",
     "car1 = Car(\"risingCar\", 5, 200)\n",
     "car1.printSpeed()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "속도는 400km/h 입니다.\n",
+      "전기차입니다.\n",
+      "연료는 electricity입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python의 상속(Inheritance)은 ()로 표시\n",
+    "class Tesla(Car):\n",
+    "    \n",
+    "    # 다형성(Polymorphism)\n",
+    "    # 생성자의 overloading (새로운 parameter 추가)\n",
+    "    def __init__(self, name, peopleNum, speed, energy):\n",
+    "        self.name = name\n",
+    "        self.peopleNum = peopleNum\n",
+    "        self.speed = speed\n",
+    "        self.energy = energy\n",
+    "    \n",
+    "    # 메소드 overriding (부모 클래스에 있는 메소드를 자식 클래스에서 재정의)\n",
+    "    def printSpeed(self):\n",
+    "        print \"속도는 {}km/h 입니다.\".format(self.speed)\n",
+    "        print \"전기차입니다.\"\n",
+    "        \n",
+    "    def printEnergy(self):\n",
+    "        print \"연료는 {}입니다.\".format(self.energy)\n",
+    "\n",
+    "tesla1 = Tesla(\"electricity Car\", 10, 400, \"electricity\")\n",
+    "tesla1.printSpeed()\n",
+    "tesla1.printEnergy()"
    ]
   }
  ],
